# Un-Dios

./: .gitignore  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
agent/orchestrator/: build.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/castor/app/: CastorApplication.kt  MainActivity.kt
app/src/main/java/com/castor/app/desktop/: DesktopContextMenu.kt  DisplayMode.kt  DisplayModeDetector.kt  DisplayModeViewModel.kt  KeyboardShortcutManager.kt
app/src/main/java/com/castor/app/di/: AppModule.kt
app/src/main/java/com/castor/app/focus/: FocusTimerCard.kt  FocusTimerScreen.kt  FocusTimerService.kt  FocusTimerViewModel.kt
app/src/main/java/com/castor/app/habits/: HabitCard.kt  HabitRepository.kt  HabitTrackerScreen.kt  HabitViewModel.kt
app/src/main/java/com/castor/app/hub/: HubControlPanel.kt  HubScreen.kt  HubService.kt
app/src/main/java/com/castor/app/launcher/: ApiKeyDialog.kt  AppDrawer.kt  AppDrawerViewModel.kt  DockManager.kt  (+6 more)
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
core/common/: build.gradle.kts
core/data/: build.gradle.kts
core/inference/: build.gradle.kts
core/inference/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
core/security/: build.gradle.kts
core/security/src/main/: AndroidManifest.xml
core/ui/: build.gradle.kts
feature/commandbar/: build.gradle.kts
feature/media/: build.gradle.kts
feature/media/src/main/: AndroidManifest.xml
feature/messaging/: build.gradle.kts
feature/notifications/: build.gradle.kts
feature/recommendations/: build.gradle.kts
feature/recommendations/src/main/: AndroidManifest.xml
feature/reminders/: build.gradle.kts
feature/reminders/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
(+271 files in other folders)
